--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -72,49 +72,6 @@ img {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
-  }
-
-  img {
-    padding-right: 0;
-    width: 103px;
-    height: 19px;
-}
-.topnav {
-  margin: 18px 3px 15px 20px;
-}
-} 
-
 main {
   font-size: 130%;
   font-weight: bolder;
@@ -450,7 +407,7 @@ input[data-error]::after {
   z-index: 1;
 }
 .hero-headline {
-  font-size: 6rem;
+  font-size: clamp(3rem, 6.5vw, 9.1rem);
   font-weight: normal;
   white-space: nowrap;
 }
@@ -526,10 +483,66 @@ footer {
     padding: 12px 35px;
   }
   .copyrights {
+    font-size: 15px;
     margin-top: 50px;
     text-align: center;
   }
 }
+
+@media screen and (max-width: 768px) {
+
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+ @media screen and (max-width: 540px) {
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    margin-top: -15px;
+  }
+
+  img {
+    padding-right: 0;
+    width: 103px;
+    height: 19px;
+}
+.topnav {
+  margin: 18px 3px 15px 20px;
+}
+
+.hero-headline {
+  font-size: 40px;
+  font-weight: bold;
+  white-space: normal;
+}
+
+.hero-content{
+  padding: 0;
+  min-width: unset;
+}
+
+.hero-text {
+  width: 100%;
+  font-size: 14px;
+}
+} 
 
 @keyframes modalopen {
   from {
