--- a/modal.css
+++ b/modal.css
@@ -199,7 +199,7 @@ input {
 }
 
 .error-message { 
-  font-size: 0.4em;
+  font-size: 0.7em;
   color: red;
 }
 
@@ -303,6 +303,27 @@ input {
   color: #fff;
   cursor: pointer;
   border: 0;
+}
+/* modal confirmation */
+
+.modal-confirmation {
+  display: none; /* Caché par défaut */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-confirmation-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  width: 300px;
 }
 /* custom select styles */
 .custom-select {
